@@ -27,6 +27,7 @@
 	- integrate rpmgi "generic iterator" with query/verify.
 	- bump popt to version to 1.10.
 	- attempt dependency tree breadth, take 1.
+	- use external libneon for http/https transport.
 
 4.3.1 -> 4.3.2:
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
